# stateflow

./: .gitignore  Pipfile  demo_client.py  demo_common.py  demo_runtime.py  fastapi_client.py  flake.nix  graphql_client.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
stateflow/: core.py
stateflow/client/graphql/: graphql.py  kafka.py
stateflow/dataflow/: address.py  args.py  dataflow.py  event.py  event_flow.py  state.py  stateful_operator.py
stateflow/descriptors/: method_descriptor.py
stateflow/runtime/: beam_runtime.py
stateflow/runtime/aws/: abstract_lambda.py  gateway_lambda.py  kinesis_lambda.py
stateflow/serialization/: json_serde.py  pickle_serializer.py  serde.py
stateflow/util/: generator_wrapper.py  local_runtime.py
tests/common/: common_classes.py
tests/dataflow/: arguments_test.py  stateful_operator_test.py
tests/serialization/: json_serializer_test.py
tests/state/: commit_state_test.py  serialize_utils.py
