[tool.poetry]
name = "stateflow"
version = "0.1.0"
description = ""
authors = ["Mathieu Post <mathieupost@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
pytest = "*"
apache-beam = "*"
apache-flink = "~1.13"
docker = "*"
confluent-kafka = "^1.9.0"
libcst = "^0.4.5"
jsonpickle = "^3.0.1"
ujson = "^5.4.0"
beam-nuggets = "^0.18.1"
pyhamcrest = "^2.0.4"
python-dynamodb-lock-whatnick = "^0.9.3"
pynamodb = "^5.2.1"
graphviz = "^0.20.1"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.6.6"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
